<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ClickedItemActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/editTotalPrice"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_launcher_background"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="122dp"
        android:layout_height="44dp"
        android:layout_below="@id/imageView"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="12dp"
        android:text="Name"
        android:textColor="@color/purple_700"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="133dp"
        android:layout_height="46dp"
        android:layout_below="@id/txtName"
        android:layout_marginLeft="19dp"
        android:text="Price"
        android:textColor="@color/teal_200"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/txtSize"
        android:layout_width="126dp"
        android:layout_height="52dp"
        android:layout_below="@id/txtPrice"
        android:layout_marginLeft="19dp"
        android:text="Size"
        android:textColor="@color/purple_200"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/txtColor"
        android:layout_width="133dp"
        android:layout_height="46dp"
        android:layout_below="@id/txtSize"
        android:layout_marginLeft="19dp"
        android:text="Color"
        android:textColor="@color/black"
        android:textSize="17dp" />

    <Button
        android:id="@+id/btnAddToCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAddToCard" />

    <Button
        android:id="@+id/btnCheckOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="-50dp"
        android:layout_below="@id/btnAddToCard"
        android:text="@string/btnCheckOut" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="183dp"
        android:layout_height="72dp"
        android:layout_below="@id/btnCheckOut"
        android:ems="10"
        android:hint="Enter the Price"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="-50dp"
        android:layout_marginLeft="200dp"
        android:hint="Enter the Qty"
        android:layout_below="@id/editPrice"
        android:inputType="textPersonName"
        />

    <Button
        android:id="@+id/btnMultiple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_below="@id/editQuantity"
        android:text="@string/btnMultiple" />

    <EditText
        android:id="@+id/editTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="100dp"
        android:hint="TotalPrice"
        android:layout_below="@id/btnMultiple"
        android:inputType="textPersonName"
        android:text="" />

</RelativeLayout>